--- a/static/css/main.css
+++ b/static/css/main.css
@@ -11,7 +11,7 @@ canvas {
   position: absolute;
   left: 30px;
   top: 30px;
-  z-index: 1;
+  z-index: 2;
   /*color: white;*/
 }
 
@@ -22,11 +22,14 @@ canvas {
 #info {
   font-family: sans-serif;
   position: absolute;
-  left: 10px;
+  right: 50px;
   top: 10px;
-  z-index: 3;
+  width: 150px;
+  z-index: 1;
   color: white;
   font-weight: normal;
+  user-select: none;
+  display: block;
 }
 
 .burger-icon {
@@ -53,7 +56,7 @@ canvas {
 }
 
 .sidenav-overlay {
-  width: 0px;
+  width: 300px;
 }
 
 .sidenav-content {
@@ -65,15 +68,13 @@ canvas {
 
 .sidenav-content .links {
   margin-top: 50px;
+  margin-bottom: 50px;
   font-size: 1em;
   user-select: none;
 }
 
 .sidenav-content .links a {
-  margin-top: 10px;
-  display: block;
-  line-height: 2em;
-  width: min-content;
+  width: 150px;
 }
 
 .sidenav-content {
@@ -86,13 +87,18 @@ canvas {
 }
 
 .sidenav-slider label {
-  color: white;
   font-size: 1em;
   margin-top: 2px !important;
+  margin-right: auto;
+}
+
+.checkboxes {
+  margin-bottom: 50px;
 }
 
 .range-field {
   margin: 5px auto 0 auto;
+
 }
 
 .range-field .thumb .value {
@@ -114,4 +120,8 @@ canvas {
 input[type="range"] {
   border: none !important;
   max-width: 120px;
+}
+
+.modal-content {
+  color: #2c3e50;;
 }
